crates/keron-lang/tests/corpus/errors/check/for_loop_var_shadows_param.keron
fn outer(x: Int): Void {
  val xs: List<Int> = [1, 2]
  for x in xs {}
}
